--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,15 +16,53 @@ body {
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
-	margin: 40px
-	auto;
-	max-width: 650px;
+	margin: 40px auto;
+	max-width: 100%;
+	width: 40%;
 	line-height: 1.6;
 	padding: 10px
 }
 
-p.pages {
+body.wrapper {
+	width: 100%;
+	margin: 0px auto;
+}
+
+ul {
+	width: 100%;
+	padding: 15px;
+	margin: 0px auto 0px auto;
+	border-top: 2px solid #000;
+	border-bottom: 2px solid #000;
+	text-align: center;
+}
+
+li {
+	display: inline;
+	margin: 0px, 3px;
+}
+
+a {
+	text-transform: uppercase;
+	text-decoration: none;
+	text-align: center;
+	vertical-align: middle;
+	padding: 6px 18px 5px 18px;
+	background-color: rgb(255, 255, 255);
+	padding: 10px;
+	margin: auto;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
+}
+
+a.on {
+	background-color: black;
+	color: white;
+}
+
+a:hover {
+	/* color: lightblue; */
+	/* color: rgb(138, 252, 224); */
+	color: rgb(55, 214, 175);
 }
