--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,9 +16,8 @@ body {
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
-	margin: 40px auto;
-	max-width: 100%;
-	width: 40%;
+	margin: 10px auto;
+	width: 45%;
 	line-height: 1.6;
 	padding: 10px
 }
@@ -29,7 +28,7 @@ body.wrapper {
 }
 
 ul {
-	width: 100%;
+	/* width: 100%; */
 	padding: 15px;
 	margin: 0px auto 0px auto;
 	border-top: 2px solid #000;
@@ -62,7 +61,5 @@ a.on {
 }
 
 a:hover {
-	/* color: lightblue; */
-	/* color: rgb(138, 252, 224); */
 	color: rgb(55, 214, 175);
 }
