--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -11,6 +11,7 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.2;
 	text-align: center;
 	vertical-align: middle;
+	margin: 0px;
 }
 
 body {
@@ -21,7 +22,7 @@ body {
 	margin: 10px auto;
 	width: 45%;
 	line-height: 1.6;
-	padding: 10px
+	padding: 10px;
 }
 
 body.wrapper {
@@ -70,6 +71,10 @@ nav li a:hover {
 	color: rgb(55, 214, 175);
 }
 
+div.projects {
+	padding: 25px;
+}
+
 div#website {
 	background-color: #f0fff0;
 }
@@ -88,4 +93,24 @@ div#calculator {
 
 div#game {
 	background-color: #ffefd5;
+}
+
+figure {
+	text-align: center;
+	vertical-align: middle;
+}
+
+p#backtotop {
+	text-transform: uppercase;
+	text-decoration: none;
+	text-align: center;
+	vertical-align: middle;
+	padding: 6px 18px 5px 18px;
+	background-color: rgb(255, 255, 255);
+	padding: 10px;
+	margin: auto;
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	color: black;
 }
