Completed Most of the Sections

--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -104,6 +104,16 @@ td.notable {
 }
 
 p#backtotop {
+	text-transform: uppercase;
+	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
+	padding: 6px 18px 5px 18px;
+	background-color: rgb(255, 255, 255);
+	padding: 10px;
+	margin: auto;
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	color: black;
 }
