--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -73,6 +73,8 @@ nav li a:hover {
 
 div.projects {
 	padding: 25px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 div#website {
@@ -114,3 +116,4 @@ p#backtotop {
 	font-style: normal;
 	color: black;
 }
+
