--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -19,15 +19,10 @@ body {
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
-	margin: 10px auto;
 	width: 45%;
 	line-height: 1.6;
-	padding: 10px
-}
-
-body.wrapper {
-	width: 100%;
-	margin: 0px auto;
+	padding: 10px;
+	margin: 10px auto;
 }
 
 h1#name {
@@ -62,7 +57,7 @@ nav a {
 }
 
 nav li a.on {
-	background-color: black;
+	background-color: rgb(0, 0, 0);
 	color: rgb(55, 214, 175);
 }
 
@@ -114,5 +109,5 @@ p#backtotop {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	color: black;
+	color: rgb(0, 0, 0);
 }
