--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,19 +19,14 @@ body {
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
-	margin: 10px auto;
 	width: 45%;
 	line-height: 1.6;
-	padding: 10px
-}
-
-body.wrapper {
-	width: 100%;
-	margin: 0px auto;
+	padding: 10px;
+	margin: 10px auto;
 }
 
 h1#name {
-	margin: 0px auto 10px auto
+	margin: 0px auto 10px auto;
 }
 
 nav ul {
@@ -59,11 +54,11 @@ nav a {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	color: black;
+	color: rgb(0, 0, 0);
 }
 
 nav li a.on {
-	background-color: black;
+	background-color: rgb(0, 0, 0);
 	color: rgb(55, 214, 175);
 }
 
@@ -74,4 +69,19 @@ nav li a:hover {
 p#quote {
 	text-align: center;
 	vertical-align: middle;
+}
+
+p#backtotop {
+	text-transform: uppercase;
+	text-decoration: none;
+	text-align: center;
+	vertical-align: middle;
+	padding: 6px 18px 5px 18px;
+	background-color: rgb(255, 255, 255);
+	padding: 10px;
+	margin: auto;
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	color: black;
 }
