--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -2,6 +2,7 @@ html {
 	overflow-x: hidden;
 	/* vw = viewport width */
 	width: 100vw;
+	background-color: rgb(255, 255, 255);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -11,6 +12,9 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.2;
 	text-align: center;
 	vertical-align: middle;
+}
+
+h2 {
 	margin: 0px;
 }
 
@@ -19,15 +23,10 @@ body {
 	font-size: 18px;
 	font-weight: 400;
 	font-style: normal;
-	margin: 10px auto;
 	width: 45%;
 	line-height: 1.6;
 	padding: 10px;
-}
-
-body.wrapper {
-	width: 100%;
-	margin: 0px auto;
+	margin: 10px auto;
 }
 
 h1#name {
@@ -59,11 +58,11 @@ nav a {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	color: black;
+	color: rgb(0, 0, 0);
 }
 
 nav li a.on {
-	background-color: black;
+	background-color: rgb(0, 0, 0);
 	color: rgb(55, 214, 175);
 }
 
@@ -114,6 +113,6 @@ p#backtotop {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	color: black;
+	color: rgb(0, 0, 0);
 }
 
