--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -1,6 +1,5 @@
 html {
 	overflow-x: hidden;
-	/* vw = viewport width */
 	width: 100vw;
 	background-color: rgb(255, 255, 255);
 }
@@ -26,7 +25,7 @@ body {
 }
 
 h1#name {
-	margin: 0px auto 10px auto
+	margin: 0px auto 10px auto;
 }
 
 nav ul {
@@ -47,13 +46,12 @@ nav a {
 	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
-	padding: 6px 18px 5px 18px;
-	background-color: rgb(255, 255, 255);
-	padding: 10px;
+	padding: 13px 20px 13px 20px;
 	margin: auto;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
 	font-style: normal;
+	color: rgb(0, 0, 0);
 }
 
 nav li a.on {
@@ -75,10 +73,9 @@ table {
 	padding-bottom: 10px;
 }
 
-
 th, td {
 	padding: 10px 10px 10px 10px;
-	width: 150px
+	width: 150px;
 }
 
 thead th {
@@ -102,7 +99,6 @@ p#backtotop {
 	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
-	padding: 6px 18px 5px 18px;
 	background-color: rgb(255, 255, 255);
 	padding: 10px;
 	margin: auto;
