--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -1,6 +1,5 @@
 html {
 	overflow-x: hidden;
-	/* vw = viewport width */
 	width: 100vw;
 	background-color: rgb(255, 255, 255);
 }
@@ -12,10 +11,6 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.2;
 	text-align: center;
 	vertical-align: middle;
-}
-
-h2 {
-	margin: 0px;
 }
 
 body {
@@ -30,7 +25,7 @@ body {
 }
 
 h1#name {
-	margin: 0px auto 10px auto
+	margin: 0px auto 10px auto;
 }
 
 nav ul {
@@ -51,9 +46,7 @@ nav a {
 	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
-	padding: 6px 18px 5px 18px;
-	background-color: rgb(255, 255, 255);
-	padding: 10px;
+	padding: 13px 20px 13px 20px;
 	margin: auto;
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	font-weight: 400;
@@ -68,6 +61,10 @@ nav li a.on {
 
 nav li a:hover {
 	color: rgb(55, 214, 175);
+}
+
+h2 {
+	margin: 0px;
 }
 
 div.projects {
@@ -106,7 +103,6 @@ p#backtotop {
 	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
-	padding: 6px 18px 5px 18px;
 	background-color: rgb(255, 255, 255);
 	padding: 10px;
 	margin: auto;
