--- a/CSS/courses.css
+++ b/CSS/courses.css
@@ -1,74 +1,11 @@
-html {
-	overflow-x: hidden;
-	width: 100vw;
-	background-color: rgb(255, 255, 255);
-}
-
-h1, h2, h3, h4, h5, h6 {
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	font-style: bold;
-	line-height: 1.2;
-	text-align: center;
-	vertical-align: middle;
-}
-
-body {
-	font-family: 'Roboto', Arial, sans-serif;
-	font-size: 18px;
-	font-weight: 400;
-	font-style: normal;
-	width: 45%;
-	line-height: 1.6;
-	padding: 10px;
-	margin: 10px auto;
-}
-
-h1#name {
-	margin: 0px auto 10px auto;
-}
-
-nav ul {
-	padding: 15px;
-	margin: 0px auto 0px auto;
-	border-top: 2px solid #000;
-	border-bottom: 2px solid #000;
-	text-align: center;
-}
-
-nav li {
-	display: inline;
-	margin: 0px, 3px;
-}
-
-nav a {
-	text-transform: uppercase;
-	text-decoration: none;
-	text-align: center;
-	vertical-align: middle;
-	padding: 13px 20px 13px 20px;
-	margin: auto;
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	color: rgb(0, 0, 0);
-}
-
-nav li a.on {
-	background-color: rgb(0, 0, 0);
-	color: rgb(55, 214, 175);
-}
-
-nav li a:hover {
-	color: rgb(55, 214, 175);
-}
+@import url("base.css");
 
 table {
 	width: 100%;
-	margin: 0px auto 0px auto;
 	empty-cells: hide;
 	text-align: center;
 	table-layout: fixed;
+	margin: 0px auto 0px auto;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
@@ -79,11 +16,11 @@ th, td {
 }
 
 thead th {
-	background-color: lightblue;
+	background-color: rgb(30, 198, 255);
 }
 
 tbody th {
-	background-color: lightgreen;
+	background-color: rgb(32, 247, 171);
 }
 
 td {
@@ -92,18 +29,4 @@ td {
 
 td.notable {
 	background-color: #f5deb3;
-}
-
-p#backtotop {
-	text-transform: uppercase;
-	text-decoration: none;
-	text-align: center;
-	vertical-align: middle;
-	background-color: rgb(255, 255, 255);
-	padding: 10px;
-	margin: auto;
-	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	color: rgb(0, 0, 0);
 }
