--- a/CSS/base.css
+++ b/CSS/base.css
@@ -2,6 +2,7 @@ html {
 	overflow-x: hidden;
 	width: 100vw;
 	background-color: rgb(255, 255, 255);
+	margin-left: calc(100vw - 100%);
 }
 
 h1, h2, h3, h4, h5, h6 {
