--- a/CSS/custom.css
+++ b/CSS/custom.css
@@ -5,7 +5,7 @@ html {
 body {
 	font-size: 18px;
 	padding-top: 70px;
-	overflow: scroll; 
+	overflow: scroll;
 }
 
 nav.navbar {
@@ -13,9 +13,11 @@ nav.navbar {
 }
 
 @media screen and (max-width: 768px) {
-	body { 
-	padding-top: 70px; 
+	body {
+		padding-top: 70px;
+	}
 }
+
 /*
 https://stackoverflow.com/questions/20721248/best-way-to-override-bootstrap-css
 https://stackoverflow.com/questions/25531028/twitter-bootstrap-3-apply-hover-only-on-table-cells
